[gd_scene load_steps=20 format=2]

[ext_resource path="res://res/menu.png" type="Texture" id=1]
[ext_resource path="res://fonts/Creepster-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Nosifer-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu.gd" type="Script" id=5]
[ext_resource path="res://music/Night of the Streets.mp3" type="AudioStream" id=6]
[ext_resource path="res://music/Metal Click.wav" type="AudioStream" id=7]

[sub_resource type="CanvasItemMaterial" id=13]
light_mode = 2

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 3
outline_color = Color( 0.662745, 0.12549, 0.12549, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.280488, 0.471545, 0.646341, 0.833333 )
colors = PoolColorArray( 0.398438, 0, 0, 1, 0.484375, 0.0132446, 0.0132446, 1, 0.671875, 0.0262451, 0.0262451, 1, 0.34375, 0, 0, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="DynamicFont" id=2]
size = 57
outline_size = 3
outline_color = Color( 0.54902, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.380392, 0, 0, 0.588235 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.380392, 0, 0, 0.980392 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.380392, 0, 0, 0.294118 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 57
outline_size = 3
outline_color = Color( 0.54902, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.380392, 0, 0, 0.588235 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.380392, 0, 0, 0.980392 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.380392, 0, 0, 0.294118 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Node2D2" type="Node2D"]
script = ExtResource( 5 )
mainGameScene = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 1.275
autoplay = true

[node name="hitsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 2.319
pitch_scale = 3.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 983.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 919.0
margin_bottom = 536.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
material = SubResource( 13 )
margin_right = 919.0
margin_bottom = 175.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.513726, 0.0901961, 0.0901961, 1 )
custom_colors/font_color_shadow = Color( 0.176471, 0.0705882, 0.0705882, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 100
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "ROOTS"
align = 2

[node name="Light2D" type="Light2D" parent="MarginContainer/VBoxContainer"]
position = Vector2( 659, 68 )
scale = Vector2( 0.456787, 182.5 )
texture = SubResource( 15 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 560.0
margin_top = 264.0
margin_right = 946.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_right = 386.0
margin_bottom = 236.0
custom_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer"]
margin_right = 386.0
margin_bottom = 68.0

[node name="Start" type="Button" parent="MarginContainer2/VBoxContainer/MarginContainer"]
margin_right = 386.0
margin_bottom = 68.0
focus_mode = 0
custom_colors/font_color = Color( 0.898039, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 3 )
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/VBoxContainer"]
margin_top = 118.0
margin_right = 386.0
margin_bottom = 186.0

[node name="Instructions" type="Button" parent="MarginContainer2/VBoxContainer/MarginContainer2"]
margin_right = 386.0
margin_bottom = 68.0
focus_mode = 0
custom_colors/font_color = Color( 0.898039, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 5 )
text = "Instructions"

[connection signal="button_up" from="MarginContainer2/VBoxContainer/MarginContainer/Start" to="." method="_on_Start_button_up"]
[connection signal="mouse_entered" from="MarginContainer2/VBoxContainer/MarginContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="button_up" from="MarginContainer2/VBoxContainer/MarginContainer2/Instructions" to="." method="_on_Instructions_button_up"]
[connection signal="mouse_entered" from="MarginContainer2/VBoxContainer/MarginContainer2/Instructions" to="." method="_on_Instructions_mouse_entered"]
